# pathos-engine

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Modelfile  NOTICE  README.md  calibrate.sh  calibrate_and_export.sh  calibration_scenarios.json  instructions.txt  manual.txt  pyproject.toml  start.sh
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
scripts/: gen_expanded_map.py  residuum_audit.py
src/pathos/: __init__.py  api_routes.py  config.py  export_portable.py  main.py
tests/: test_api_routes.py  test_appraiser.py  test_asr.py  test_autobio_memory.py  test_autobio_persistence.py  test_behavior.py  test_calibration.py  test_contagion.py  test_coupling.py  test_creativity.py  test_development.py  test_discovery.py  test_dreaming.py  test_drives.py  test_dynamics.py  test_emotion_api.py  test_emotion_processor.py  test_emotional_attention.py  test_emotional_prefix.py  test_emotional_sampler.py  test_external_signals.py  test_forecasting.py  test_generator.py  test_homeostasis.py  test_immune.py  test_integration_v3.py  test_interoception.py  test_memory.py  test_meta_emotion.py  test_metrics.py  test_mood.py  test_narrative.py  test_needs.py  test_personality.py  test_phenomenology.py  test_predictive.py  test_reappraisal.py  test_regulation.py  test_research.py  test_residuum_baseline.py  (+30 more)
tests/alignment/: __init__.py  test_blackmail_steering.py  test_reward_hacking_steering.py  test_steering_cap_invariants.py  test_sycophancy_steering.py  utils.py
(+2744 files in other folders)
